<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdf_parser</name>
  <version>0.0.1</version>
  <description>urdf_parser package</description>
  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <maintainer email="carlo.morganti@fraunhofer.it">Carlo Morganti</maintainer>
  <license>Copyright Fraunhofer Italia 2024</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>